Business logic moved from MessagesController to Services.